# aws-serverless

./: .gitignore  pom.xml  template.yaml
applications-insight-slo-lambda/: Makefile  go.mod  main.go  samconfig.toml  template.yml
applications-insight-slo-lambda/.aws-sam/: build.toml
aws-lambda-custom-runtime-java/: .gitignore  Dockerfile  bootstrap  build.sh  dependency-reduced-pom.xml  pom.xml
aws-lambda-json-log/: go.mod  main.go
aws-lambda-json-logging/: Makefile  pom.xml
aws-lambda-secret-extension/: Makefile  pom.xml
lambda-custom-ser/: pom.xml
lambda-mcp-server-example/: README.md  pom.xml  samconfig.toml  template.yaml
lambda-mcp-server-example/document-summarization-async/: Makefile  README.md  template.yaml  test-api.sh
lambda-mcp-server-example/document-summarization-async/.aws-sam/: build.toml
lambda-mcp-server-example/document-summarization-async/events/: dynamodb-stream-event.json  (+3 more)
location-data-mcp-server/: main.py  mcp_auth_config.example.json  mcp_auth_decorator.py  mcp_authorization.py  mcp_client_registration.py  mcp_security_utils.py  pyproject.toml  requirements.txt  samconfig.toml
location-data-mcp-server/.aws-sam/: build.toml
rust-lambda/rust-db-connection-lambda/: Cargo.toml
rust-lambda/rust-hello-world-lambda/: Cargo.toml
rust-lambda/trending-movie-lambda/: Cargo.toml
sns-fifo-replay/: pom.xml
sns-fifo-replay/infra/: main.tf
step-function-async-callback/: Makefile  go.mod  go.sum
step-function-async-callback/infra/: go.mod  go.sum
token-authorizer-lambda/: Cargo.toml
token-authorizer-lambda/src/: main.rs
(+52 files in other folders)
